Bug 40931: (bug 39533 follow-up) More specific max-width CSS rule to prevent side-effects
The changes made on bug 39533 for the export page have affected other
instance of select2.
eg. on the "place holds" view the select2 elements are too narrow.

This patch suggests to reduce the elements on which the CSS rule
'max-width: 60%' is applied.

Test plan:
Confirm that this patch does not affect the display of the select2
elements on the export and item edition pages.

Confirm that the pickup locations are wider (and their values are
displayed) when placing multi holds

--- a/koha-tmpl/intranet-tmpl/prog/css/select2.css
+++ b/koha-tmpl/intranet-tmpl/prog/css/select2.css
@@ -52,6 +52,9 @@
 
 .select2.select2-container.select2-container--default {
     flex-grow: 1;
+}
+
+fieldset.rows li .select2.select2-container.select2-container--default {
     max-width: 60%;
 }
 
